K8s---App---Gitops---on-prim-main/apps/base/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: apps
  labels:
    app.kubernetes.io/component: apps
spec:
  type: ClusterIP
  selector:
    app: apps
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: memcached
  labels:
    app.kubernetes.io/component: memcached
spec:
  type: ClusterIP
  selector:
    app: memcached
  ports:
    - name: memcached
      port: 11211
      targetPort: 11211
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  labels:
    app.kubernetes.io/component: mysql
spec:
  type: ClusterIP
  selector:
    app: mysql
  ports:
    - name: mysql
      port: 3306
      targetPort: 3306
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  labels:
    app.kubernetes.io/component: rabbitmq
spec:
  type: ClusterIP
  selector:
    app: rabbitmq
  ports:
    - name: amqp
      port: 5672
      targetPort: 5672
      protocol: TCP
    - name: management
      port: 15672
      targetPort: 15672
      protocol: TCP
